# explore-options

./: .gitignore  Makefile  README.md  pyproject.toml
src/explore_options/: __init__.py  main.py
src/explore_options/checklist/: __init__.py  engine.py
src/explore_options/connectivity/: __init__.py  base.py  cboe_options.py  diagonal_snapshot.py  robinhood_unofficial.py  stooq.py
src/explore_options/strategies/: __init__.py  base.py  covered_calls.py  echo.py  long_leaps_short_calls_diagonal.py  registry.py  reverse.py  rolling_options.py
tests/: test_checklist_engine.py  test_connectivity.py  test_covered_calls_strategy.py  test_main.py  test_strategy_interface.py
